# ilex-lang

./: .gitignore  LICENSE.txt  Makefile  README.md  TODO.txt  build.sh  count.sh  firstReleaseMilestones.txt  install.sh  scc.bat  scc.sh  scc.txt
benchmark/bubblesort/: bubblesort.ilex  bubblesort.js  bubblesort.py
benchmark/fib/: fib.ilex  fib.js  fib.py
benchmark/pi/: calc_pi.cpp  calc_pi.go  calc_pi.ilex  calc_pi.py  calc_pi_2.ilex
c/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  glad.c  ilex.h  ilex_include.h  lexer.c  lexer.h  main.c  memory.c  memory.h  object.c  object.h  table.c  table.h  util.c  util.h  value.c  value.h  vm.c  vm.h
c/inc/glad/: glad.h
c/libs/: lib_array.c  lib_array.h  lib_ascii.c  lib_ascii.h  lib_base64.c  lib_base64.h  lib_builtIn.c  lib_builtIn.h  lib_env.c  lib_env.h  lib_file.c  lib_file.h  lib_fmt.c  lib_fmt.h  lib_http.c  lib_http.h  lib_ilex.c  lib_ilex.h  lib_io.c  lib_io.h  lib_json.c  lib_json.h  lib_map.c  lib_map.h  lib_math.c  lib_math.h  lib_natives.c  lib_natives.h  lib_random.c  lib_random.h  lib_set.c  lib_set.h  lib_string.c  lib_string.h  lib_sys.c  lib_sys.h  lib_test.c  lib_test.h  lib_time.c  lib_time.h  (+6 more)
c/tst/: .env2  arrayTest.ilex  assertTest.ilex  base64Test.ilex  basicTest.ilex  broken.ilex  classes.ilex  enumTest.ilex  envTest.ilex  fib.ilex  fieldBench.ilex  fileTest.ilex  forTest.ilex  functionTest.ilex  globalVars.ilex  hello.ilex  httpTest.ilex  ifTest.ilex  ioTest.ilex  jsonTest.ilex  mapTest.ilex  mathTest.ilex  nativesTest.ilex  panicTest.ilex  s.ilex  setTest.ilex  stringTest.ilex  superclassTest.ilex  switchTest.ilex  test.toml  testTest.ilex  tomltest.ilex  tst.txt  useTest.ilex  varsTest.ilex  windowTest.ilex
c/tst/language/: arrayTest.ilex  assertTest.ilex  boolTest.ilex  enumTest.ilex  fieldBench.ilex  forTest.ilex  functionTest.ilex  ifTest.ilex  mapTest.ilex  matchTest.ilex  panicTest.ilex  setTest.ilex  sortTest.ilex  stringTest.ilex  switchTest.ilex  useTest.ilex  varsTest.ilex  whenTest.ilex
c/tst/libraries/: .env  base64Test.ilex  fmtTest.ilex  mathTest.ilex  nativesTest.ilex  sysTest.ilex  test.toml
c/tst/misc/: fib.ilex
c/types/: base_types.c  base_types.h  type_array.c  type_array.h  type_enum.c  type_enum.h  type_file.c  type_file.h  type_map.c  type_map.h  type_set.c  type_set.h  type_string.c  type_string.h  type_web_app.c  type_web_app.h  type_window.c  type_window.h
docs/: _config.yml  index.md
docs/docs/: arrays.md  basic.md  constolflow.md  functions.md  libs.md  maps.md  operators.md  variables.md
docs/docs/libs/: lib_io.md  libs.md
examples/: ramanujanPrimes.ilex  rockPaperScissors.ilex  rps.ilex  trig.ilex
examples/Adevent Of Code/: dayOne.ilex
java/: README.md
java/src/com/nice/: Expr.java  Main.java  Stmt.java
src/com/nice/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lexer.java  Main.java  Parser.java  RuntimeError.java  Token.java  TokenType.java
src/com/tool/: GenerateAst.java
